--- a/themes/achieve-arts/package.json
+++ b/themes/achieve-arts/package.json
@@ -26,6 +26,8 @@
         "webpack-cli": "^6.0.1"
     },
     "dependencies": {
+        "@splidejs/splide": "^4.1.4",
+        "@splidejs/splide-extension-auto-scroll": "^0.5.3",
         "autoprefixer": "^10.4.15",
         "postcss-preset-env": "^10.0.7",
         "sass": "^1.77.5"
