--- a/plugins/media-text/package.json
+++ b/plugins/media-text/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "cta",
+	"name": "media-text",
 	"version": "0.1.0",
-	"description": "Displays a Call to Action.",
+	"description": "Displays media and text content with alternate layouts.",
 	"author": "MBD",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
@@ -15,6 +15,9 @@
 		"start": "wp-scripts start --blocks-manifest"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^30.27.0"
+		"@wordpress/scripts": "^31.0.0"
+	},
+	"dependencies": {
+		"@splidejs/splide": "^4.1.4"
 	}
 }
