--- a/plugins/testimonials/package.json
+++ b/plugins/testimonials/package.json
@@ -18,6 +18,7 @@
 		"@wordpress/scripts": "^31.0.0"
 	},
 	"dependencies": {
-		"@splidejs/splide": "^4.1.4"
+		"@splidejs/splide": "^4.1.4",
+		"@splidejs/splide-extension-auto-scroll": "^0.5.3"
 	}
 }
