--- a/themes/achieve-arts/package.json
+++ b/themes/achieve-arts/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "clean": "rm dist/bundle.js",
         "build-dev": "webpack --mode development",
-        "build-prod": "webpack --mode production && node build-info-gen.js",
+        "build": "webpack --mode production && node build-info-gen.js",
         "start": "webpack --progress --watch --mode production"
     },
     "devDependencies": {
